# project-bcrs

./: .env.example  .gitignore  DATA_INFO.md  DEMO_SCRIPT.md  DEVELOPMENT_GUIDE.md  FINAL_SUMMARY.md  FINAL_UPDATE_SUMMARY.md  INSTALLATION.md  Makefile  PROJECT_COMPLETION_REPORT.md  PROJECT_README.md  PROJECT_STATUS.md  README.md  RESEARCH_COMPARISON.md  START_HERE.md  pyproject.toml  requirements.txt
dashboard/: app.py
models/: cox_model.pkl  feature_names.pkl  lstm_model.pt  results.json  rsf_model.pkl  scaler.pkl
notebooks/: complete_analysis.ipynb
scripts/: quick_demo.py  train_all_models.py  verify_system.py
src/tcris/: __init__.py
src/tcris/config/: __init__.py  settings.py
src/tcris/data/: __init__.py  fusion.py  loaders.py
src/tcris/features/: __init__.py  extractors.py  transformers.py
src/tcris/models/: __init__.py  base.py
src/tcris/models/statistical/: __init__.py
src/tcris/utils/: __init__.py  decorators.py  exceptions.py  helpers.py
