[tool.poetry]
name = "tcris"
version = "0.1.0"
description = "Temporal Cancer Recurrence Intelligence System - AI-Powered Bladder Cancer Prediction Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tcris", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Data Processing
pandas = "^2.1.0"
polars = "^0.19.0"
numpy = "^1.24.0"
pyarrow = "^14.0.0"
# Statistical Modeling
lifelines = "^0.27.8"
scikit-survival = "^0.22.0"
statsmodels = "^0.14.0"
# Machine Learning
scikit-learn = "^1.3.0"
# Deep Learning
torch = "^2.1.0"
pytorch-lightning = "^2.1.0"
pycox = "^0.2.3"
# Visualization
plotly = "^5.17.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
altair = "^5.1.0"
# Web Framework
streamlit = "^1.28.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
# Interpretability
shap = "^0.43.0"
lime = "^0.2.0.1"
captum = "^0.6.0"
# Data Validation
great-expectations = "^0.18.0"
# Utilities
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
tqdm = "^4.66.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.88.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.0"
flake8 = "^6.1.0"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/tcris --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/tcris"]
omit = ["*/tests/*", "*/__init__.py"]
